--- a/src/UltimaIII.Avalonia/UltimaIII.Avalonia.csproj
+++ b/src/UltimaIII.Avalonia/UltimaIII.Avalonia.csproj
@@ -24,6 +24,13 @@
     <PackageReference Include="Silk.NET.OpenAL.Soft.Native" Version="1.21.1">
       <NoWarn>NU1701</NoWarn>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <AvaloniaResource Include="Assets\sprites\**\*.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Include="Avalonia.Diagnostics" Version="11.2.1">
       <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
