--- a/src/UltimaIII.Avalonia/UltimaIII.Avalonia.csproj
+++ b/src/UltimaIII.Avalonia/UltimaIII.Avalonia.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Avalonia.Desktop" Version="11.2.1" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.1" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.1" />
+    <PackageReference Include="NVorbis" Version="0.10.5" />
     <PackageReference Include="Silk.NET.OpenAL" Version="2.21.0" />
     <PackageReference Include="Silk.NET.OpenAL.Soft.Native" Version="1.21.1">
       <NoWarn>NU1701</NoWarn>
@@ -39,5 +40,28 @@
       <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Assets\Music\MainMenu.ogg" />
+    <Content Include="Assets\Music\MainMenu.ogg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <None Remove="Assets\Music\OverWorld.ogg" />
+    <Content Include="Assets\Music\OverWorld.ogg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <None Remove="Assets\Music\Combat.ogg" />
+    <Content Include="Assets\Music\Combat.ogg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <None Remove="Assets\Music\Dungeon.ogg" />
+    <Content Include="Assets\Music\Dungeon.ogg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <None Remove="Assets\Music\Town.ogg" />
+    <Content Include="Assets\Music\Town.ogg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
