--- a/src/UltimaIII.Avalonia/UltimaIII.Avalonia.csproj
+++ b/src/UltimaIII.Avalonia/UltimaIII.Avalonia.csproj
@@ -25,9 +25,7 @@
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.1" />
     <PackageReference Include="NVorbis" Version="0.10.5" />
     <PackageReference Include="Silk.NET.OpenAL" Version="2.21.0" />
-    <PackageReference Include="Silk.NET.OpenAL.Soft.Native" Version="1.21.1">
-      <NoWarn>NU1701</NoWarn>
-    </PackageReference>
+    <PackageReference Include="Silk.NET.OpenAL.Soft.Native" Version="1.23.1" />
   </ItemGroup>
 
   <ItemGroup>
